cabal-version:      >= 1.6
build-type:         Simple
name:               declarative-fieldml-prototype
version:            0.0.1
author:             Andrew Miller <ak.miller@auckland.ac.nz>
maintainer:         Andrew Miller <ak.miller@auckland.ac.nz>
copyright:          University of Auckland 2012
homepage:           https://github.com/A1kmm/declarative-fieldml-prototype
license:            BSD3
license-file:       LICENSE
synopsis:           A prototype for trying out ideas around a declarative FieldML with advanced features.
category:           Mathematics
description:
  declarative-fieldml-prototype is a prototype for trying out ideas around a declarate FieldML with advanced features.

source-repository head
    type:     git
    location: git@github.com:A1kmm/declarative-fieldml-prototype.git

-- executable runfieldml
--   main-is: Data/FieldML/RunFieldML.hs
--   build-depends: cmdargs >= 0.5
--   ghc-prof-options: -auto-all -caf-all

library
  ghc-options: -funbox-strict-fields
  ghc-prof-options: -auto-all -caf-all
  build-depends: base >=3 && <5, array, containers, uniplate, parsec, monads-tf, filepath, bytestring, curl
  build-tools: alex, happy
  exposed-modules:
    Data.FieldML.LexicalAnalyser
