cabal-version:      >= 1.8
build-type:         Simple
name:               declarative-fieldml-prototype
version:            0.0.1
author:             Andrew Miller <ak.miller@auckland.ac.nz>
maintainer:         Andrew Miller <ak.miller@auckland.ac.nz>
copyright:          University of Auckland 2012
homepage:           https://github.com/A1kmm/declarative-fieldml-prototype
license:            BSD3
license-file:       LICENSE
synopsis:           A prototype for trying out ideas around a declarative FieldML with advanced features.
category:           Mathematics
description:
  declarative-fieldml-prototype is a prototype for trying out ideas around a declarate FieldML with advanced features.

source-repository head
    type:     git
    location: git@github.com:A1kmm/declarative-fieldml-prototype.git

library
  hs-source-dirs: src
  ghc-options: -funbox-strict-fields
  ghc-prof-options: -auto-all -caf-all
  build-depends: base >=3 && <5, array, containers, uniplate, parsec, monads-tf, filepath, bytestring, curl, containers, uniplate, data-default, monad-loops
  build-tools: alex, happy
  exposed-modules:
    Data.FieldML.LexicalAnalyser
    Data.FieldML.Parser
    Data.FieldML.Level1Structure
    Data.FieldML.Level2Structure
    Data.FieldML.Level1ToLevel2

executable runfieldml
   main-is: Data/FieldML/RunFieldML.hs
   build-depends: cmdargs >= 0.5, declarative-fieldml-prototype, base >= 3 && <5, monads-tf
   ghc-prof-options: -auto-all -caf-all
   ghc-shared-options: -shared -dynamic
